# EchoMon

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.ts
src-tauri/: Cargo.toml  build.rs  ping_history.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
